--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,10 @@
-astroid==2.6.5
 click==8.0.1
 Flask==2.0.1
 gunicorn==20.1.0
 isort==5.9.3
-itsdangerous==2.0.1
-Jinja2==3.0.1
 lazy-object-proxy==1.6.0
-MarkupSafe==2.0.1
 requests==2.26.0
 pylint==2.9.6
 six==1.16.0
-toml==0.10.2
-Werkzeug==2.0.1
+wheel==0.37.0
 wrapt==1.12.1
